# annoying-alert

./: CHANGELOG.md  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  tray.rs
src-tauri/src/commands/: config.rs  mod.rs  overlay.rs  reminders.rs  sounds.rs
src-tauri/src/db/: config.rs  migrations.rs  mod.rs  schema.rs
src-tauri/src/models/: category.rs  mod.rs  reminder.rs
src-tauri/src/notifier/: mod.rs  ntfy.rs  overlay.rs
src-tauri/src/scheduler/: cron_parser.rs  mod.rs  next_trigger.rs  quiet_hours.rs
src/app/: App.tsx
src/features/reminders/: api.ts  categories.ts  schemas.ts  types.ts
src/features/reminders/components/: ReminderCard.tsx  ReminderForm.tsx  ReminderFormSheet.tsx  RemindersList.tsx
src/features/reminders/hooks/: useReminders.ts
src/features/reminders/overlay/: Overlay.tsx  sound.ts
src/features/settings/: SettingsSheet.tsx
src/shared/components/: ConfirmDialog.tsx
src/shared/components/ui/: alert-dialog.tsx  button.tsx  checkbox.tsx  dialog.tsx  radio-group.tsx  select.tsx  separator.tsx  sheet.tsx  slider.tsx  sonner.tsx  switch.tsx  tabs.tsx
src/shared/lib/: datetime.ts
