[package]
name = "waqyay"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "waqyay_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"

# Autostart on login. On Windows this writes to HKCU\...\Run, which
# is per-user and requires no elevation — plays nicely with our per-user
# MSI install. The frontend toggles it via `@tauri-apps/plugin-autostart`
# in the SettingsSheet.
tauri-plugin-autostart = "2"

# Serialization: serde is the de-facto standard. `derive` enables
# #[derive(Serialize, Deserialize)] on our structs so Tauri can
# automatically convert them to/from JSON across the IPC bridge.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# SQLite. `bundled` compiles SQLite from source and links it
# statically into our binary — zero OS dependency, same behavior
# on every Windows machine. Also enables chrono<->SQLite integration.
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }

# Timestamps. `serde` feature lets chrono types serialize to ISO 8601
# strings automatically when they cross the IPC boundary.
chrono = { version = "0.4", features = ["serde"] }

# Error handling. `thiserror` for defining our own error types
# (library-style), `anyhow` for propagating errors upward with
# context (application-style). Idiomatic Rust error story.
thiserror = "1"
anyhow = "1"

# Logging. `log` is the facade (what our code calls); `env_logger`
# is a simple sink that prints to stderr with RUST_LOG filtering.
log = "0.4"
env_logger = "0.11"

# Synchronous HTTP client for ntfy.sh pushes. `ureq` is intentionally
# blocking — a perfect match for our sync scheduler thread. `reqwest`
# would drag in tokio for zero benefit here. Default features include
# rustls-based HTTPS, which ntfy.sh needs.
ureq = "2"

# Base64 for encoding audio bytes into data: URLs consumable by
# the webview's <audio> element. The frontend reads the picked file
# via the browser's FileReader API (standard HTML input) and ships
# the bytes to Rust as base64, which we decode, hash, and persist
# under the app data dir. Playback reads it back the same way.
# ~30kB overhead per short sound, negligible.
base64 = "0.22"

# Stable filename hash (SHA-256) for uploaded sounds. Content-addressed
# storage means re-uploading the same file is free and the filename is
# deterministic for testing.
sha2 = "0.10"

